Social Links Added

--- a/index.html
+++ b/index.html
@@ -89,10 +89,10 @@
                 <h5>1:04 AM EST </h5>
             </div>
             <div id="footerright">
-                <a href="#">dribble</a>
-                <a href="#">instagram</a>
-                <a href="#">linkedin</a>
-                <a href="#">twitter</a>
+                <a href="https://github.com/Aaditya2025">GitHub</a>
+                <a href="https://www.instagram.com/adityaa__0003/">instagram</a>
+                <a href="https://www.linkedin.com/in/aditya-yadav-3b8a71214/">linkedin</a>
+                <a href="https://x.com/yadav_aditya_03">twitter</a>
               </div>
         </div>
     </div>
