--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
         <div id="footer">
             <div id="footerleft">
                 <h5>2024 &copy;</h5>
-                <h5>1:04 AM EST </h5>
+                <h5 id="footerleftsecond">1:04 AM EST </h5>
             </div>
             <div id="footerright">
                 <a href="https://github.com/Aaditya2025">GitHub</a>
