--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div id="main">
         <div id="hero">
             <nav id="nav">
-                <a href="#">Aditya Yadav</a>
+                <a href="#">ADITYA YADAV</a>
                 <h4>MENU+</h4>
             </nav>
             <div class="heading">
@@ -29,7 +29,7 @@
                         <h1 class="boundingelem" id="secondh1">DEVELOPER</h1>
                     </div>
                     <div class="bounding">
-                        <h5 class="boundingelem">Based in Toronto</h5>
+                        <h5 class="boundingelem">Based in Front-end</h5>
                     </div>
                 </div>
             </div>
@@ -43,8 +43,8 @@
                 
             </div>
             <div id="herofooter">
-                    <a href="#">Currently Working at YML <i class="ri-arrow-right-up-line"></i></a>
-                    <a href="#">Protopie Ambassador <i class="ri-arrow-right-up-line"></i></a>
+                    <a href="#">Currently Working at FullStack <i class="ri-arrow-right-up-line"></i></a>
+                    <a href="#">Keep Exploring Below<i class="ri-arrow-right-up-line"></i></a>
                     <div id="iconset">
                         <div class="circle"><i class="ri-arrow-down-fill"></i></div>
                         <div class="circle"><i class="ri-arrow-down-fill"></i></div>
@@ -54,28 +54,30 @@
         </div>
         <div class="second">
             <div class="elem">
-                <img src="./img/plug.png" >
-                <h1>the plug</h1>
-                <h5>2022</h5>
+                <img src="./img/aditya.jpg" >
+                <h1>profile</h1>
+                <h5>2004</h5>
             </div>
             <div class="elem">
-                <img src="./img/ixperience.png" >
-                <h1>Experience</h1>
+                <img src="./img/Coding Ninjas.png" >
+                <h1>DSA</h1>
                 <h5>2022</h5>
             </div>
             <div class="elem elemlast">
-                <img src="./img/hudu.png" >
-                <h1>hudu</h1>
-                <h5>2021</h5>
+                <img src="./img/UDEMY.png" >
+                <h1>development</h1>
+                <h5>2023</h5>
             </div>
         </div>
         <div id="about">
             <img src="./img/adit.jpg">
             <div id="textabout">
                 <h5>(about me)</h5>
-                <p>I'm a product designer with a passion for creating products that not only look good but also solve real problems. When I'm not sketching ideas on paper, you can find me binge-watching a Netflix series or playing video games. My design philosophy is simple: make it visually appealing, functional, and bring a smile to people's faces. I'm the designer you want on your team if you want to make people say 'I need that in my life!'.
+                <p>Hello, my name is ADITYA YADAV, and I am currently a third-year B.Tech student. Throughout my academic journey, I have developed a strong foundation in Data Structures and Algorithms (DSA), having successfully solved over 250+ problems in C++.
+
+                    In addition to my problem-solving skills, I have gained substantial experience in web development. My technical skill set includes HTML, CSS, JavaScript, React.js, Bootstrap, Node.js, Express.js, Tailwind, and version control with Git and GitHub. I am passionate about continuously expanding my knowledge and am currently learning additional web development technologies to further enhance my expertise.
                 </p>
-                <a href="#">Let's Talk</a>
+                <a href="https://mail.google.com/mail/u/0/#inbox">Let's Talk</a>
             </div>
             
         </div>
