finalising the page

--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
                 
             </div>
             <div id="herofooter">
-                    <a href="#">Currently Working at FullStack <i class="ri-arrow-right-up-line"></i></a>
-                    <a href="#">Keep Exploring Below<i class="ri-arrow-right-up-line"></i></a>
+                    <a href="https://github.com/Aaditya2025">Currently Working at FullStack <i class="ri-arrow-right-up-line"></i></a>
+                    <a href="https://github.com/Aaditya2025?tab=repositories">Keep Exploring Below<i class="ri-arrow-right-up-line"></i></a>
                     <div id="iconset">
                         <div class="circle"><i class="ri-arrow-down-fill"></i></div>
                         <div class="circle"><i class="ri-arrow-down-fill"></i></div>
@@ -55,18 +55,18 @@
         <div class="second">
             <div class="elem">
                 <img src="./img/aditya.jpg" >
-                <h1>profile</h1>
-                <h5>2004</h5>
+                <h1 class="secfade" >profile</h1>
+                <h5 class="secfade"  >2004</h5>
             </div>
             <div class="elem">
                 <img src="./img/Coding Ninjas.png" >
-                <h1>DSA</h1>
-                <h5>2022</h5>
+                <h1 class="secfade" >DSA</h1>
+                <h5 class="secfade" >2022</h5>
             </div>
             <div class="elem elemlast">
                 <img src="./img/UDEMY.png" >
-                <h1>development</h1>
-                <h5>2023</h5>
+                <h1 class="secfade" >development</h1>
+                <h5 class="secfade" >2023</h5>
             </div>
         </div>
         <div id="about">
@@ -83,7 +83,7 @@
         </div>
         <div id="subscribe">
             <h5>(forgot to mention)</h5>
-            <h3>subscribe to my youtube channel <i class="ri-arrow-right-up-line"></i></h3>
+            <h3>connect to my all social handle <i class="ri-arrow-right-up-line"></i></h3>
         </div>
         <div id="footer">
             <div id="footerleft">
