--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         </div>
         <div id="subscribe">
             <h5>(forgot to mention)</h5>
-            <h3>connect to my all social handle <i class="ri-arrow-right-up-line"></i></h3>
+            <h3>connect with my all social handle if you are a developer<i class="ri-arrow-right-up-line"></i></h3>
         </div>
         <div id="footer">
             <div id="footerleft">
