--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
             </div>
             <div id="footerright">
                 <a href="https://github.com/Aaditya2025">GitHub</a>
-                <a href="https://www.instagram.com/aditya_2o25/">instagram</a>
+                <a href="https://www.instagram.com/adiitya_yadav/">instagram</a>
                 <a href="https://www.linkedin.com/in/aditya-yadav-3b8a71214/">linkedin</a>
                 <a href="https://x.com/yadav_aditya_03">twitter</a>
               </div>
